syntax = "proto3";

package idl;

service CliToHub {
    rpc StatusUpgrade(StatusUpgradeRequest) returns (StatusUpgradeReply) {}
    rpc StatusConversion(StatusConversionRequest) returns (StatusConversionReply) {}
    rpc CheckObjectCount(CheckObjectCountRequest) returns (CheckObjectCountReply) {}
    rpc CheckVersion (CheckVersionRequest) returns (CheckVersionReply) {}
    rpc CheckDiskSpace (CheckDiskSpaceRequest) returns (CheckDiskSpaceReply) {}
    rpc Initialize(InitializeRequest) returns (stream Message) {}
    rpc Execute(ExecuteRequest) returns (stream Message) {}
    rpc Finalize(FinalizeRequest) returns (stream Message) {}
    rpc SetConfig (SetConfigRequest) returns (SetConfigReply) {}
    rpc GetConfig (GetConfigRequest) returns (GetConfigReply) {}
    rpc RestartAgents(RestartAgentsRequest) returns (RestartAgentsReply) {}
    rpc StopServices(StopServicesRequest) returns (StopServicesReply) {}
}

message InitializeRequest {
    string oldBinDir = 1;
    string newBinDir = 2;
    int32 oldPort = 3;
}
message ExecuteRequest {}
message FinalizeRequest {}

message RestartAgentsRequest {}
message RestartAgentsReply {
    repeated string agentHosts = 1;
}

message StopServicesRequest {}
message StopServicesReply {}

message StatusConversionRequest {}

message PrimaryStatus {
    StepStatus Status = 1;
    int32 Dbid = 2;
    int32 Content = 3;
    string Hostname = 4;
}

message StatusConversionReply {
    repeated PrimaryStatus conversionStatuses = 1;
}

message StatusUpgradeRequest {}

message StatusUpgradeReply {
    repeated UpgradeStepStatus listOfUpgradeStepStatuses = 1;
}

message UpgradeStepStatus {
    UpgradeSteps step = 1;
    StepStatus status = 2;
}

enum UpgradeSteps {
    UNKNOWN_STEP = 0; // http://androiddevblog.com/protocol-buffers-pitfall-adding-enum-values/
    CONFIG = 1;
    START_AGENTS = 2;
    INIT_TARGET_CLUSTER = 3;
    SHUTDOWN_CLUSTERS = 4;
    UPGRADE_MASTER = 5;
    COPY_MASTER = 6;
    UPGRADE_PRIMARIES = 7;
    START_TARGET_CLUSTER = 8;
    RECONFIGURE_PORTS = 9;
}

enum StepStatus {
    UNKNOWN_STATUS = 0; // http://androiddevblog.com/protocol-buffers-pitfall-adding-enum-values/
    PENDING = 1;
    RUNNING = 2;
    COMPLETE = 3;
    FAILED = 4;
}

message CountPerDb {
    string DbName = 1;
    int32 AoCount = 2;
    int32 HeapCount = 3;
}
message CheckObjectCountRequest {}

message CheckObjectCountReply {
    repeated CountPerDb ListOfCounts = 1;
}

message CheckVersionRequest {}

message CheckVersionReply {
    bool IsVersionCompatible = 1;
}

message CheckDiskSpaceRequest {}
message CheckDiskSpaceReply {
  message DiskUsage {
    uint64 free = 1;
    uint64 total = 2;
  }
  map<string, DiskUsage> failed = 1;
}

message PrepareInitClusterRequest {}
message PrepareInitClusterReply {}

message Chunk {
  bytes buffer = 1;
  enum Type {
    UNKNOWN = 0;
    STDOUT = 1;
    STDERR = 2;
  }
  Type type = 2;
}

message Message {
  oneof contents {
    Chunk chunk = 1;
    UpgradeStepStatus status = 2;
  }
}

message SetConfigRequest {
    string name = 1;
    string value = 2;
}
message SetConfigReply {}

message GetConfigRequest {
    string name = 1;
}
message GetConfigReply {
    string value = 1;
}
